infra/k8s/star-wars-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: star-wars-deployment
spec:
  selector:
    matchLabels:
      app: star-wars
  replicas: 1
  template:
    metadata:
      labels:
        app: star-wars
    spec:
      containers:
        - name: star-wars
          image: derryukere/star-wars:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Never # Image should not be pulled
---
apiVersion: v1
kind: Service
metadata:
  name: sw-service
spec:
  selector:
    app: star-wars
  type: ClusterIP 
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
