infra/k8s/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sw-service
                port:
                  number: 3000
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: sw-service-two
                port:
                  number: 3000
